# IGS

./: .gitignore  README.md  pyproject.toml
scripts/: 2dgs_img_comp.py  gs2d_test.py  profiling.py
src/igs/: __init__.py  gs2d.py  gs_triton.py  gs_triton_chunked.py  reg.py
